# BA_G2O

./: CMakeLists.txt  README.md
include/: bundleAdjustment.h  testData.h
src/: main.cpp
